# campusrover_navigation

./: .gitignore
src/campusrover_description/: CMakeLists.txt  package.xml
src/campusrover_description/launch/: display_campusrover.launch
src/campusrover_description/urdf/: charger_rover.urdf
src/campusrover_move/: CMakeLists.txt  package.xml
src/campusrover_move/include/campusrover_move/: dwa_planner.hpp
src/campusrover_move/launch/: dwa_planner.launch.py  pathing_following.launch.py  sim_world.launch.py
src/campusrover_move/src/: dwa_planner.cpp  dwa_planner_ros1.txt  path_following.cpp  path_following_ros1.txt
src/campusrover_move/srv/: PullOverPathGenerator.srv
src/charger_description/: CMakeLists.txt  package.xml
src/charger_description/config/: joint_names_Charger_Chassis_20240829.yaml
src/charger_description/launch/: display.launch  gazebo.launch
src/charger_description/meshes/: back_yd_lidar.STL  left_wheel.STL  right_wheel.STL  velodyne.STL
src/charger_description/urdf/: Charger_Chassis_20240829.csv  Charger_Chassis_20240829.urdf
